工单管理界面mvp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,12 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".workordermanage.view.WorkOrderManage">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"></action>
-                <category android:name="android.intent.category.LAUNCHER"></category>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".servicemanage.view.ServiceManage">
         </activity>
     </application>
 
