--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.github.arcadefire:nice-spinner:1.3.7'
     implementation 'com.beardedhen:androidbootstrap:2.3.2'
+    implementation 'com.brouding:android-simple-dialog:0.3.1'
+    implementation('cn.qqtheme.framework:WheelPicker:1.5.6') {
+        exclude group: 'com.android.support'
+    }
 }
