--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation('cn.qqtheme.framework:WheelPicker:1.5.6') {
         exclude group: 'com.android.support'
     }
+    implementation 'com.nightonke:boommenu:2.1.1'
 }
