--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".workordermanage.view.WorkOrderManage">
+        <activity android:name=".workordermanage.view.WorkOrderManage"></activity>
+        <activity android:name=".servicemanage.view.ServiceManage">
 
         </activity>
-        <activity android:name=".servicemanage.view.ServiceManage" >
-
+        <activity android:name=".organizationmanage.ui.OrganizationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".organizationmanage.ui.OrganizationActivity"></activity>
+        </activity>>
+
     </application>
 
 </manifest>
