--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,17 @@
         <activity android:name=".workordermanage.view.WorkOrderManage">
         </activity>
         <activity android:name=".servicemanage.view.ServiceManage">
+
+        </activity>
+        <activity android:name=".organizationmanage.ui.OrganizationActivity"/>
+        <activity android:name=".servicemanage.view.NewService">
+        </activity>
+        <activity android:name=".index.view.Index">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".organizationmanage.ui.OrganizationActivity"/>
-        <activity android:name=".servicemanage.view.NewService">
         </activity>
     </application>
 
