--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.manage.demoapp">
 
-    <application
-            tools:replace="android:icon"
-            android:name=".App"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".workordermanage.view.WorkOrderManage">
-        </activity>
-        <activity android:name=".servicemanage.view.ServiceManage">
-        </activity>
-        <activity android:name=".organizationmanage.ui.OrganizationActivity"/>
-        <activity android:name=".servicemanage.view.NewService">
-        </activity>
-        <activity android:name=".index.view.Index">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+	<application
+			android:name=".App"
+			android:allowBackup="true"
+			android:icon="@mipmap/ic_launcher"
+			android:label="@string/app_name"
+			android:roundIcon="@mipmap/ic_launcher_round"
+			android:supportsRtl="true"
+			android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+			tools:replace="android:icon">
+		<activity android:name=".workordermanage.view.WorkOrderManage">
+		</activity>
+		<activity android:name=".servicemanage.view.ServiceManage">
+		</activity>
+		<activity android:name=".organizationmanage.ui.OrganizationActivity"/>
+		<activity android:name=".servicemanage.view.NewService">
+		</activity>
+		<activity android:name=".index.view.Index">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
-        <activity android:name=".staffmanage.view.SelectOrg">
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER"/>
+			</intent-filter>
+		</activity>
+		<activity android:name=".staffmanage.view.SelectOrg">
+		</activity>
+		<activity android:name=".staffmanage.view.StaffManage">
+		</activity>
+	</application>
 
 </manifest>
