--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -37,4 +41,6 @@ dependencies {
     }
     implementation 'com.nightonke:boommenu:2.1.1'
     implementation 'cn.pedant.sweetalert:library:1.3'
+    //    图片选择
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
 }
